# Isaac-GR00T

./: .gitignore  ATTRIBUTIONS.md  CLAUDE.md  Dockerfile  README.md  orin.Dockerfile  pyproject.toml  thor.Dockerfile
.github/workflows/: main.yml
demo_data/droid_sample/meta/: stats.json
docker/: Dockerfile  README.md
examples/LIBERO/: libero_spatial_no_noops_1.0.0_lerobot
examples/SO100/: README.md
getting_started/: finetune_new_embodiment.md  hardware_recommendation.md
gr00t/: __init__.py
gr00t/configs/: finetune_config.py
gr00t/configs/model/: gr00t_n1d7.py
gr00t/data/: stats.py
gr00t/data/dataset/: sharded_mixture_dataset.py  sharded_single_step_dataset.py
gr00t/deployment/: modes.py
gr00t/eval/: rollout_policy.py
gr00t/eval/real_robot/SO100/: pyproject.toml
gr00t/eval/sim/: env_utils.py
gr00t/eval/sim/LIBERO/: setup_libero.sh
gr00t/eval/sim/SimplerEnv/: setup_SimplerEnv.sh
gr00t/eval/sim/robocasa/: setup_RoboCasa.sh
gr00t/eval/sim/wrapper/: video_recording_wrapper.py
gr00t/experiment/: experiment.py  launch_finetune.py
gr00t/model/backbone/eagle2_hg_model/: radio_model.py
gr00t/model/gr00t_n1d7/: gr00t_n1d7.py  image_augmentations.py  processing_gr00t_n1d7.py
gr00t/model/modules/: eagle_backbone.py  qwen3_backbone.py
gr00t/model/modules/nvidia/Eagle-Block2A-2B-v2/: config.json  image_processing_eagle3_vl_fast.py  modeling_eagle3_vl.py  processing_eagle3_vl.py
gr00t/policy/: server_client.py
gr00t/utils/: video_utils.py
scripts/: activate_orin.sh  patch_triton_cuda13.sh
scripts/deployment/: README.md  build_tensorrt_engine.py  build_trt_pipeline.py  export_onnx_n1d7.py  standalone_inference_script.py  trt_model_forward.py  verify_n1d7_trt.py
scripts/deployment/dgpu/: install_deps.sh
scripts/deployment/orin/: install_deps.sh  pyproject.toml
scripts/deployment/spark/: install_deps.sh  pyproject.toml
scripts/deployment/thor/: install_deps.sh  pyproject.toml
scripts/lerobot_conversion/: README.md  convert_v3_to_v2.py  pyproject.toml
slobot/: configuration.py  genesis.py
tests/: conftest.py
tests/gr00t/data/: test_sharded_datasets.py
tests/gr00t/eval/sim/: test_env_utils.py
tests/gr00t/experiment/: _run_distributed_experiment.py  test_experiment_run.py
tests/gr00t/policy/: test_gr00t_policy.py  test_gr00t_policy_gpu.py  test_policy_service.py
tests/gr00t/utils/: test_video_utils_dispatch_errors.py
tests/scripts/deployment/: test_standalone_inference.py  test_trt_pipeline.py  test_video_backend_consistency.py
tests/test_support/: runtime.py
tools/: manifest_alignment.toml
