# Default platform pyproject.toml (x86, GB200, and any non-Jetson GPU)

[build-system]
requires = ["setuptools>=67", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "gr00t"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "albumentations==2.0.8",
    "huggingface-hub==1.19.0",
    "opencv-python-headless==4.13.0.92",
    "av==17.1.0",
    "diffusers==0.38.0",
    "dm-tree==0.1.10",
    "lmdb==2.2.1",
    "msgpack==1.2.0",
    "msgpack-numpy==0.4.8",
    # pandas 2.2.3: last 2.x line compatible with numpy 2.2.6 on Python 3.12–3.13.
    "pandas==2.2.3",
    "peft==0.19.1",
    "termcolor==3.3.0",
    "torch==2.12.0",
    "torchvision==0.27.0",
    "transformers==5.11.0",
    "tyro==1.0.13",
    "click==8.4.1",
    "datasets==5.0.0",
    "cryptography==48.0.1",
    "einops==0.8.2",
    "gitpython==3.1.50",
    "jsonlines==4.0.0",
    "gymnasium==1.3.0",
    "matplotlib==3.11.0",
    # 2.2.6 on Python <3.14; 2.4.6 on 3.14+ (dm-tree / pandas pins on 3.14).
    "numpy==2.2.6; python_version < '3.14'",
    "numpy==2.4.6; python_version >= '3.14'",
    "omegaconf==2.3.1",
    "scipy==1.17.1",
    "torchcodec==0.14.0; sys_platform != 'win32' and (sys_platform != 'linux' or (platform_machine != 'aarch64' and platform_machine != 'arm64' and platform_machine != 'armv7l'))",
    "wandb==0.27.2",
    "pyzmq==27.1.0",
    # deepspeed publishes wheels only for x86_64 Linux.
    "deepspeed==0.19.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    # triton is needed on aarch64 (GB200) but ships with torch on x86_64
    "triton==3.7.0; sys_platform == 'linux' and platform_machine == 'aarch64'",
    # flash-attn: x86_64 builds from sdist; aarch64 via jetson index at deploy time (see install scripts).
    "flash-attn==2.8.3.post1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "onnx==1.21.0",
    "onnxscript==0.7.0",
]

[project.optional-dependencies]
dev = [
    "boto3",
    "ruff==0.15.17",
    "ipython",
    "pytest==9.0.3",
    "pytest-timeout",
    "build",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gr00t*"]

[tool.uv]
# diffusers 0.38+ may require safetensors pre-releases on Python 3.14.
prerelease = "allow"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
triton = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchcodec = [
    { index = "jetson-sbsa-cu130", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.12.0", "numpy==2.2.6", "triton==3.7.0"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
addopts = "--import-mode=importlib"
markers = [
    "gpu: tests that require a GPU",
    "multigpu: tests that require multiple GPUs and use all visible GPUs",
]
# Include fixture setup/teardown in JUnit <testcase time="..."> so duration
# reports (ci/print_duration_summary.py) and TestRun.duration in testdb
# reflect real wall-clock time. With the default ("call"), expensive
# session/module/class-scoped fixtures (e.g. NFS->local model staging,
# Gr00tPolicy load) are invisible and tests look misleadingly fast.
junit_duration_report = "total"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["gr00t"]
exclude = [
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    ".venv",
    "dist",
    "logs",
    "*.ipynb",
    "external_dependencies",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = false
split-on-trailing-comma = false
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[[tool.uv.index]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "jetson-sbsa-cu130"
url = "https://pypi.jetson-ai-lab.io/sbsa/cu130/+simple"
explicit = true
