[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_conversion"
version = "0.1.0"
requires-python = ">=3.12,<3.15"

dependencies = [
    "huggingface_hub",
    "jsonlines",
    "numpy>=2.0.0,<2.3.0",
    "pyarrow",
    "tqdm",
    "lerobot @ git+https://github.com/huggingface/lerobot.git@v0.5.1",
]

[tool.uv]
constraint-dependencies = [
    "torch==2.12.0",
    "triton==3.7.0",
]
override-dependencies = [
    "torch==2.12.0",
    "torchvision==0.27.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]
triton = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
