# Spark platform pyproject.toml — DGX Spark (aarch64, CUDA 13, Python 3.10+)
# This is a self-contained config with no platform markers needed.

[build-system]
requires = ["setuptools>=67", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "gr00t"
version = "0.1.0"
requires-python = ">=3.10,<3.15"
dependencies = [
    "albumentations==2.0.8",
    "av==17.0.1",
    "diffusers==0.36.0.dev0",
    "dm-tree==0.1.8",
    "huggingface-hub==1.17.0",
    "jsonlines==4.0.0",
    "lmdb==2.2.0",
    "msgpack==1.1.2",
    "msgpack-numpy==0.4.8",
    "opencv-python-headless==4.13.0.92",
    "pandas==2.2.3",
    "peft==0.19.1",
    "termcolor==3.3.0",
    "torch==2.12.0",
    "triton==3.7.0",
    "torchvision==0.27.0",
    "transformers==5.9.0",
    "tyro==1.0.13",
    "click==8.4.1",
    "datasets==4.8.5",
    "cryptography==48.0.0",
    "einops==0.8.2",
    "gitpython==3.1.50",
    "gymnasium==1.3.0",
    "matplotlib==3.10.9",
    "numpy==2.2.6; python_version < '3.14'",
    "numpy==2.4.6; python_version >= '3.14'",
    "omegaconf==2.3.0",
    "scipy==1.15.3",
    "wandb==0.27.0",
    "pyzmq==27.1.0",
    "torchcodec>=0.10.0,<0.14.0",
    "onnx==1.21.0",
    "onnxscript==0.7.0",
    "tensorrt>=10.14.1.48.post1",
    "nvidia-cudnn-cu13",
    "nvidia-cudss-cu13",
    "flash-attn==2.8.3",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.15",
    "ipython",
    "pytest==9.0.3",
    "pytest-timeout",
    "build",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gr00t*"]

[tool.uv]
prerelease = "allow"

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.12.0", "numpy==2.2.6", "triton==3.7.0"]

[tool.uv.sources]
torch = [{ index = "jetson-sbsa-cu130" }]
torchvision = [{ index = "jetson-sbsa-cu130" }]
torchcodec = [{ index = "jetson-sbsa-cu130" }]
triton = [{ index = "jetson-sbsa-cu130" }]
flash-attn = [{ index = "jetson-sbsa-cu130" }]
diffusers = [{ index = "jetson-sbsa-cu130" }]

[[tool.uv.index]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
explicit = true

[[tool.uv.index]]
name = "jetson-sbsa-cu130"
url = "https://pypi.jetson-ai-lab.io/sbsa/cu130/+simple"
explicit = true
