# Thor platform pyproject.toml — Jetson AGX Thor (aarch64, CUDA 13, Python 3.12+)
# This is a self-contained config with no platform markers needed.

[build-system]
requires = ["setuptools>=67", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "gr00t"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "albumentations==2.0.8",
    "av==17.1.0",
    "diffusers==0.38.0",
    "dm-tree==0.1.10",
    "huggingface-hub==1.19.0",
    "jsonlines==4.0.0",
    "lmdb==2.2.1",
    "msgpack==1.2.0",
    "msgpack-numpy==0.4.8",
    "opencv-python-headless==4.13.0.92",
    "pandas==2.2.3",
    "peft==0.19.1",
    "termcolor==3.3.0",
    "torch==2.12.0",
    "triton==3.7.0",
    "torchvision==0.27.0",
    "transformers==5.11.0",
    "tyro==1.0.13",
    "click==8.4.1",
    "datasets==5.0.0",
    "cryptography==48.0.1",
    "einops==0.8.2",
    "gitpython==3.1.50",
    "gymnasium==1.3.0",
    "matplotlib==3.11.0",
    "numpy==2.2.6; python_version < '3.14'",
    "numpy==2.4.6; python_version >= '3.14'",
    "omegaconf==2.3.1",
    "scipy==1.17.1",
    "wandb==0.27.2",
    "pyzmq==27.1.0",
    "torchcodec==0.14.0",
    "nvidia-cudnn-cu13",
    "nvidia-cudss-cu13",
    "flash-attn==2.8.3.post1",
    "onnx==1.21.0",
    "onnxscript==0.7.0",
    "tensorrt>=10.14.1.48.post1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.17",
    "ipython",
    "pytest==9.0.3",
    "pytest-timeout",
    "build",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gr00t*"]

[tool.uv]
prerelease = "allow"

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.12.0", "numpy==2.2.6", "triton==3.7.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchcodec = [{ index = "pytorch-cu130" }]
triton = [{ index = "pytorch-cu130" }]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
markers = [
    "gpu: tests that require a GPU",
    "multigpu: tests that require multiple GPUs and use all visible GPUs",
]
junit_duration_report = "total"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["gr00t"]
exclude = [
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    ".venv",
    "dist",
    "logs",
    "*.ipynb",
    "external_dependencies",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = false
split-on-trailing-comma = false
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[[tool.uv.index]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
